<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="326dp"
        android:layout_height="266dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432">

        <TextView
            android:id="@+id/pet_name_message"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:fontFamily="serif"
            android:text="@string/pet_name_message"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/box_username"
            android:layout_width="135dp"
            android:layout_height="18dp"
            android:text="@string/pet_name"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:hint="@string/pet_name_INPUT"
            android:lineSpacingExtra="10sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/addNameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/soft_red"
            android:text="@string/button_enter"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/pet_name_error"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="italic" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>