<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateUser">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="447dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/instructions_box"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:fontFamily="serif"
                android:text="@string/player_name_message"
                android:textAlignment="center"
                android:textSize="25sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_username_text"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/In"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/UsernameBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NAME" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/name_error_box"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="italic" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/submit_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_enter"
                android:backgroundTint="@color/soft_red"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>