<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PetFragment">

    <Button
        android:id="@+id/homeButton"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="Go To Games"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150sp"
        android:layout_height="55sp"
        android:text="Go to Pet Store"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />

    <Button
        android:id="@+id/button4"
        android:layout_width="150sp"
        android:layout_height="55sp"
        android:text="Alarm settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

    <Button
        android:id="@+id/button5"
        android:layout_width="150sp"
        android:layout_height="55sp"
        android:text="Go to Graveyard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="314dp"
        android:layout_height="373dp"
        android:layout_marginBottom="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="244dp"
            android:src="@drawable/istockphoto_1277290269_612x612_2"

            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/name_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Temp_Pet_Name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="39dp" />

        <TextView

            android:id="@+id/HHDISPLAY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HH_message"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/COINDISPLAY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coin_count_message"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>